<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    tools:context="be.hogent.jensbuysse.metartaff.fragments.DetailFragment">


    <TableRow

        android:layout_width="0dp"
        android:layout_height="fill_parent">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_weight="1"
            android:text="@string/aiport" />

        <TextView
            android:id="@+id/airport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1" />

    </TableRow>
    <TableRow
        android:layout_width="0dp"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_weight="1"
            android:text="@string/day_of_month" />

        <TextView
            android:id="@+id/dayofmonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1" />

    </TableRow>
    <TableRow
        android:layout_width="0dp"
        android:layout_height="fill_parent">

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="Time" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1" />

    </TableRow>
    <TableRow
        android:layout_width="0dp"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_weight="1"
            android:text="@string/wind_direction" />

        <TextView
            android:id="@+id/winddirection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1" />

    </TableRow>
    <TableRow
        android:layout_width="0dp"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_weight="1"
            android:text="@string/wind_speed" />

        <TextView
            android:id="@+id/windspeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1" />

    </TableRow>
    <TableRow
        android:layout_width="0dp"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_weight="1"
            android:text="@string/gusts" />

        <TextView
            android:id="@+id/gusts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1" />

    </TableRow>
    <TableRow
        android:layout_width="0dp"
        android:layout_height="fill_parent">

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/sight" />

        <TextView
            android:id="@+id/sight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1" />

    </TableRow>


</TableLayout>

